# Bug-swarm-hunters

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: plugin.json
adapters/: __init__.py  tradingbot_adapter.py
commands/: bug-hunt.md
core/: __init__.py  base_hunter.py  bug_hunter_arena.py  hunter_memory.py  leaderboard.py
hunters/: __init__.py  circular_state_hunter.py  data_boundary_hunter.py  process_hunter.py  schema_hunter.py  signal_flow_hunter.py  time_window_hunter.py
